--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,8 +9,17 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-}
-
-.theme-dark .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+  --bg-header: url("../images/cover-image-dark.png");
+  --text-accent: #FF0070;
+  --header-title: #DB00FF;
+  --bg-color: #000028;
+  --bg-title-decor: #FF0070;
+  --color-title-decor: #000028;
+  --color-main: #F1B2CE;
+  --title-color: #FF0070;
+  --header-border: #ff007f;
+  --color-shadow: #FF0070;
+  --theme-color: #FF0070;
+  --hover-button: rgb(255, 0, 112, 40%);
+  --hover-link: #F1B2CE;
 }
