--- a/styles/style.css
+++ b/styles/style.css
@@ -55,7 +55,7 @@
   display: var(--rec-display);
 }
 
-.header__text-decor { /*скрыть при светлой теме*/
+.header__text-decor {
   padding-right: 29px;
   line-height: 25px;
   text-transform: uppercase;
@@ -113,7 +113,7 @@
 }
 
 .header__theme-menu-button:focus-visible {
-  border-bottom: 1px solid var(--hover-button);
+  border-bottom: 1px solid var(--focus-button);
 }
 
 .header_title {
@@ -210,6 +210,9 @@
 }
 
 .main-text {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
   color: var(--color-main);
   font-weight: 400;
   line-height: 23.45px;
@@ -231,7 +234,7 @@
   color: var(--color-title-decor);
   font-family: inherit;
   font-size: inherit;
-  background-color: var(--bg-title-decor);
+  background-color: var(--bg-title-decor);  
 }
 
 .picture-content {
@@ -369,7 +372,7 @@
     gap: 11px;
   }
 
-  .second-list {
+  .what-list {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
   }
