LastUpdate light.css

--- a/styles/light.css
+++ b/styles/light.css
@@ -21,6 +21,7 @@
   --theme-color: #353430;
   --hover-button: #32312D66;
   --hover-link: #353430;
+  --focus-buttom: #353430;
   --rec-display: none;
 }
 
@@ -38,9 +39,6 @@
   --theme-color: #353430;
   --hover-button: #32312D66;
   --hover-link: #353430;
-  }
-
-  .header__first-decoration {
-    display: none;
+  --rec-display: none;
   }
 }
