LastUpdate dark.css

--- a/styles/dark.css
+++ b/styles/dark.css
@@ -22,4 +22,6 @@
   --theme-color: #FF0070;
   --hover-button: rgb(255, 0, 112, 40%);
   --hover-link: #F1B2CE;
+  --focus-button: #FF0070;
+  --rec-display: block;
 }
