--- a/styles/style.css
+++ b/styles/style.css
@@ -162,6 +162,7 @@
   grid-template-rows: repeat(4, min-content);
   gap: var(--main-gap);
   padding: var(--content-padding);
+  background-color: var(--bg-color);
 }
 
 .main-content-why {
